添加第一篇life

--- a/life/2014/12/2014-12-05.md
+++ b/life/2014/12/2014-12-05.md
@@ -22,6 +22,6 @@ title: 生活轨迹 -> 2014 -> 2014-11-05
 
 你还在我身旁。
 
- ![你还在我身旁](/life/2014/2014Res/120503.jpg =440*4035)
+ ![你还在我身旁](/life/2014/2014Res/120503.jpg)
   
 
