新增代理模式

--- a/_posts/DesignPattern/2014-12-5-设计模式之（三）【代理模式】.md
+++ b/_posts/DesignPattern/2014-12-5-设计模式之（三）【代理模式】.md
@@ -73,5 +73,7 @@ public class ProxySeller implements TicketSeller {
         String customerInfo="张三丰";
         ProxySeller ps=new ProxySeller(customerInfo);
         ps.sellTicket();
+        //运行结果：铁路公司出售一张票给张三丰
     }
 {% endhighlight %}
+
