--- a/_posts/spider/2014-12-4-细说垂直型网络爬虫（十一）【去重模块之simHash】.md
+++ b/_posts/spider/2014-12-4-细说垂直型网络爬虫（十一）【去重模块之simHash】.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: 细说垂直型网络爬虫（九）【去重模块之simHash】
+title: 细说垂直型网络爬虫（十一）【去重模块之simHash】
 category: 细说垂直型网络爬虫
 date: 2014-12-4
 
 ---
 
-##细说垂直型网络爬虫（九）【去重模块之simHash】
+##细说垂直型网络爬虫（十一）【去重模块之simHash】
 
 标签： 网络爬虫 文本去重 simHash
 
