--- a/_posts/spider/2014-11-29-细说垂直型网络爬虫（八）【解析模块之Parser】.md
+++ b/_posts/spider/2014-11-29-细说垂直型网络爬虫（八）【解析模块之Parser】.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: 细说垂直型网络爬虫（六）【解析模块之Parser】
+title: 细说垂直型网络爬虫（八）【解析模块之Parser】
 category: 细说垂直型网络爬虫
 date: 2014-11-29
 
 ---
 
-##细说垂直型网络爬虫（六）【解析模块之Parser】
+##细说垂直型网络爬虫（八）【解析模块之Parser】
 
 标签： 网络爬虫 抓取模块 解析 Parser
 
