--- a/_posts/spider/2014-11-27-细说垂直型网络爬虫（六）【解析模块之Jsoup】.md
+++ b/_posts/spider/2014-11-27-细说垂直型网络爬虫（六）【解析模块之Jsoup】.md
@@ -14,6 +14,8 @@ date: 2014-11-27
 ##Jsoup是用来干什么的
 Jsoup是解析Html文档的工具，它可以将String、File、InputStream转化为Document进行解析，此外还可以直接通过URL获取Document。
 
+<!-- more -->
+
 ##常用的方法
 >
 - 获取Document：
