--- a/_posts/spider/2014-11-27-细说垂直型网络爬虫（六）【解析模块之Jsoup】.md
+++ b/_posts/spider/2014-11-27-细说垂直型网络爬虫（六）【解析模块之Jsoup】.md
@@ -168,8 +168,7 @@ el.select("a[href*=example.com]") - finds links pointing to example.com (loosely
 34、public Integer elementSiblingIndex ()   得到该元素在兄弟元素集合中的索引。如果该元素是第一个，则返回0.
 35、public Element lastElementSibling ()   得到该元素的最后一个兄弟元素。
 36、public Elements getElementsByTag (String tagName)   根据tagName查询子元素集
-37、public Element getElementById (String id)   通过ID查找元素。包括元素本身和其子元素都在查询范围内。
-注意：该方法寻找的是从该元素开始的第一个匹配的ID对应的元素，如果从不同位置作为起点去寻找可能得到不同的匹配该ID的元素
+37、public Element getElementById (String id)   通过ID查找元素。包括元素本身和其子元素都在查询范围内。注意：该方法寻找的是从该元素开始的第一个匹配的ID对应的元素，如果从不同位置作为起点去寻找可能得到不同的匹配该ID的元素
 38、public Elements getElementsByClass (String className)  寻找包含className的class的元素集。包括元素本身和其子元素都在查询范围内。不区分大小写。元素集可能包含多个class(<div class="header round first">) 这个方法会检测每一个class，所以你可以使用el.getElementsByClass("header")找到上面这个元素。
 39、public Elements getElementsByAttribute (String key)  通过元素属性的键寻找元素集。
 40、public Elements getElementsByAttributeStarting (String keyPrefix)  根据属性的前缀寻找元素。HTML5属性集使用 data- 前缀
