--- a/_posts/spider/2014-11-26-细说垂直型网络爬虫（五）【抓取模块之Fentch】.md
+++ b/_posts/spider/2014-11-26-细说垂直型网络爬虫（五）【抓取模块之Fentch】.md
@@ -1,22 +1,22 @@
 ---
 layout: post
-title: 细说垂直型网络爬虫（五）【抓取模块之Fentch】
+title: 细说垂直型网络爬虫（五）【抓取模块之Fetch】
 category: 细说垂直型网络爬虫
 date: 2014-11-26
 
 ---
 
-##细说垂直型网络爬虫（五）【抓取模块之Fentch】
+##细说垂直型网络爬虫（五）【抓取模块之Fetch】
 
-标签： 网络爬虫 抓取模块 Fentch
+标签： 网络爬虫 抓取模块 Fetch
 
 
 
-##Fentch模块主要做什么
-Fentch模块主要的功能就是通过URL获取页面内容。
+##Fetch模块主要做什么
+Fetch模块主要的功能就是通过URL获取页面内容。
 
-##Fentch过程中需要注意的问题
-Fentch是一个网络IO的过程，由于网络的不确定性，在这个过程中可能出现各种各样的异常或错误。
+##Fetch过程中需要注意的问题
+Fetch是一个网络IO的过程，由于网络的不确定性，在这个过程中可能出现各种各样的异常或错误。
 
 <!-- more -->
 
@@ -25,10 +25,10 @@ Fentch是一个网络IO的过程，由于网络的不确定性，在这个过程
 - socketTimeout：获取数据超时；出现此类异常可能的原因：抓取服务器网络情况不佳、网站服务器网络情况不佳等。
 - 403 forbidden：被禁止访问；出现此类异常可能的原因：目标网站屏蔽抓取服务器的访问（封IP等）。
 - 301 302等重定向：页面被重定向；出现此类异常可能的原因：目标网站改版、SEO处理等。
-- 乱码：抓取到的页面乱码；出现此类异常可能的原因：页面本身乱码、Fentch未能成功识别页面编码。
+- 乱码：抓取到的页面乱码；出现此类异常可能的原因：页面本身乱码、Fetch未能成功识别页面编码。
 -其他。
 
-##Fentch过程实现（HTTPClient）
+##Fetch过程实现（HTTPClient）
 
 使用HttpClient发送请求、接收响应很简单，一般需要如下几步即可。
 1. 创建HttpClient对象。
