--- a/_posts/spider/2014-11-19-细说垂直型网络爬虫（四）【抓取模块之架构】.md
+++ b/_posts/spider/2014-11-19-细说垂直型网络爬虫（四）【抓取模块之架构】.md
@@ -16,15 +16,15 @@ date: 2014-11-19
 ![抓取模块架构图](/res/img/blogimg/fentch.png)
 
 ##架构说明
-数据抓取模块主要可以分为三个部分：抓取（Fentcher）、解析（Parser）和存储（DB DAO/File Saver）
+数据抓取模块主要可以分为三个部分：抓取（Fetcher）、解析（Parser）和存储（DB DAO/File Saver）
 >
-- Fentcher:通过URL获取对应网页的内容。
+- Fetcher:通过URL获取对应网页的内容。
 - Parser:解析获取到的网页内容，得到新的URL、结构化的数据等。
 - DB DAO/File Saver:将获取到的数据存储到数据库或文件等。
 
 ##需要注意的地方
 >
-- Fentch的时候如果Fentch量特别大，则有必要存储DNS信息，如果抓取大型网站，例如天猫、京东、腾讯等有反爬虫的网站时，则需要
+- Fetch的时候如果Fetch量特别大，则有必要存储DNS信息，如果抓取大型网站，例如天猫、京东、腾讯等有反爬虫的网站时，则需要
 伪装爬虫的措施，这类措施主要有：使用代理IP、放慢抓取速度、使用VPS等。
 - Parser的时候，不同的网页不会不同的Parser规则，这些规则可以存储到数据库中，方便随时更改。
 - URL队列：这是抓取过程中很重要的一部分，如果把这个队列放到云端或一台独立的服务器的话，就可以实现分布式了。
