修改爬虫二

--- a/_posts/spider/2014-11-16-细说垂直型网络爬虫（二）【爬虫架构】.md
+++ b/_posts/spider/2014-11-16-细说垂直型网络爬虫（二）【爬虫架构】.md
@@ -18,8 +18,10 @@ date: 2014-11-16
 - 及时性：爬虫应该尽快的抓取到目标网站更新的内容。
 - 不重复性：不重复抓取已经抓取过的网页，采用增量抓取。
 - 分布式：爬虫应该能够在多台机器上同时执行。
-
+- 容错性：爬虫抓取过程中可能出现被禁止访问、目标网页出现错误等异常，所以必须要有对应的处理措施。
 <!-- more -->
+
+![解析器基本结构图](/res/img/blogimg/2014120901.jpg)
 
 ##二、抓取策略
 
