--- a/_posts/spider/2014-11-16-细说垂直型网络爬虫（二）【爬虫架构】.md
+++ b/_posts/spider/2014-11-16-细说垂直型网络爬虫（二）【爬虫架构】.md
@@ -21,7 +21,7 @@ date: 2014-11-16
 - 容错性：爬虫抓取过程中可能出现被禁止访问、目标网页出现错误等异常，所以必须要有对应的处理措施。
 <!-- more -->
 
-![解析器基本结构图](/res/img/blogimg/2014120901.jpg)
+![爬虫架构图](/res/img/blogimg/2014120901.jpg)
 
 ##二、抓取策略
 
