新增爬虫十二

--- a/_posts/spider/2014-12-8-细说垂直型网络爬虫（十二）【监控模块之网页监控】.md
+++ b/_posts/spider/2014-12-8-细说垂直型网络爬虫（十二）【监控模块之网页监控】.md
@@ -15,6 +15,8 @@ date: 2014-12-8
 1.抓取过程中，目标网页或网站可能对你的访问作出一些限制，例如禁止爬虫访问，所以很有必要知道目标网站是否禁止了爬虫的访问。
 2.目标网页或网站可能网页改版、更换地址或者出现服务器宕机等意外。
 
+<!-- more -->
+
 ###分享一种简单的监控方案
 方案：
 >
