增加爬虫十四

--- a/_posts/spider/2014-12-9-细说垂直型网络爬虫（十四）【源码解读之Crawl4J】.md
+++ b/_posts/spider/2014-12-9-细说垂直型网络爬虫（十四）【源码解读之Crawl4J】.md
@@ -12,6 +12,9 @@ date: 2014-12-9
 
 ###Crawl4J简介
 Crawl4J是一个简单的Java爬虫程序，总共才三十多个类，非常适合爬虫入门的学习。
+
+<!-- more -->
+
 Crawl4J的主要包有：
 >
 edu.uci.ics.crawler4j.crawler 基本抓取逻辑和抓取配置
