修改爬虫十四

--- a/_posts/spider/2014-12-9-细说垂直型网络爬虫（十四）【源码解读之Crawl4J（1）】.md
+++ b/_posts/spider/2014-12-9-细说垂直型网络爬虫（十四）【源码解读之Crawl4J（1）】.md
@@ -1,17 +1,17 @@
 ---
 layout: post
-title: 细说垂直型网络爬虫（十四）【源码解读之Crawl4J】
+title: 细说垂直型网络爬虫（十四）【源码解读之Crawl4J（1）】
 category: 细说垂直型网络爬虫
 date: 2014-12-9
 
 ---
 
-##细说垂直型网络爬虫（十四）【源码解读之Crawl4J】
+##细说垂直型网络爬虫（十四）【源码解读之Crawl4J（1）】
 
 标签： 网络爬虫 开源爬虫源码解读 Crawl4J
 
 ###Crawl4J简介
-Crawl4J是一个简单的Java爬虫程序，总共才三十多个类，非常适合爬虫入门的学习。
+Crawl4J是一个开源的Java爬虫程序，总共才三十多个类，比较简单，非常适合爬虫入门的学习。
 
 <!-- more -->
 
@@ -89,6 +89,9 @@ public static void main(String[] args) {
 		}
 	}
 {% endhighlight %}
+
+
+
 
 
 
