新增爬虫十五

--- a/_posts/spider/2014-12-10-细说垂直型网络爬虫（十五）【源码解读之Crawl4J（2）】.md
+++ b/_posts/spider/2014-12-10-细说垂直型网络爬虫（十五）【源码解读之Crawl4J（2）】.md
@@ -17,7 +17,7 @@ Crawl4J是一个开源的Java爬虫程序，总共才三十多个类，比较简
 
 ###2.edu.uci.ics.crawler4j.crawler包
 edu.uci.ics.crawler4j.crawler包主要负责爬虫的配置和控制，包括的类有：Configurable、CrawlConfig、CrawlController、Page和WebCrawler
-	先看看**CrawlConfig**类，了解Crawl4J有哪些基本的配置，Crawl4J使用berkeley db来存储抓取的临时数据，如抓取过程中的URL,这样依赖
+先看看**CrawlConfig**类，了解Crawl4J有哪些基本的配置，Crawl4J使用berkeley db来存储抓取的临时数据，如抓取过程中的URL,这样依赖
 就可以进行断点抓取。
 {% highlight java %}
 	/**
@@ -164,9 +164,39 @@ edu.uci.ics.crawler4j.crawler包主要负责爬虫的配置和控制，包括的
 	private String proxyPassword = null;
 {% endhighlight %}
 
-	**CrawlController**类
+**CrawlController**类：
+主要属性有：自定义的数据对象、本地历史抓取数据、爬虫是否抓取完成和是否立即停止抓取：
 
+{% highlight java %}
+/**
+	 * The 'customData' object can be used for passing custom crawl-related
+	 * configurations to different components of the crawler.
+	 * 自定义数据对象
+	 */
+	protected Object customData;
 
+	/**
+	 * Once the crawling session finishes the controller collects the local data
+	 * of the crawler threads and stores them in this List.
+	 * 本地历史抓取数据
+	 */
+	protected List<Object> crawlersLocalData = new ArrayList<Object>();
+
+	/**
+	 * Is the crawling of this session finished?
+	 * 爬虫是否抓取完成
+	 */
+	protected boolean finished;
+
+	/**
+	 * Is the crawling session set to 'shutdown'. Crawler threads monitor this
+	 * flag and when it is set they will no longer process new pages.
+	 * 是否立即停止抓取
+	 */
+	protected boolean shuttingDown;
+{% endhighlight %}
+
+主要的方法有：构造方法CrawlController、开启爬虫的方法start、添加种子URL的方法addSeed。
 
 
 
