--- a/_posts/spider/2014-12-10-细说垂直型网络爬虫（十五）【源码解读之Crawl4J（2）】.md
+++ b/_posts/spider/2014-12-10-细说垂直型网络爬虫（十五）【源码解读之Crawl4J（2）】.md
@@ -16,7 +16,8 @@ Crawl4J是一个开源的Java爬虫程序，总共才三十多个类，比较简
 <!-- more -->
 
 ###2.edu.uci.ics.crawler4j.crawler包
-edu.uci.ics.crawler4j.crawler包主要负责爬虫的配置和控制，包括的类有：Configurable、CrawlConfig、CrawlController、Page和WebCrawler
+edu.uci.ics.crawler4j.crawler包主要负责爬虫的配置和控制，包括的类有：抽象的配置类Configurable、配置类CrawlConfig、爬虫控
+制类CrawlController、页面Page和爬虫实现逻辑WebCrawler
 先看看**CrawlConfig**类，了解Crawl4J有哪些基本的配置，Crawl4J使用berkeley db来存储抓取的临时数据，如抓取过程中的URL,这样依赖
 就可以进行断点抓取。
 {% highlight java %}
@@ -197,11 +198,214 @@ edu.uci.ics.crawler4j.crawler包主要负责爬虫的配置和控制，包括的
 {% endhighlight %}
 
 主要的方法有：构造方法CrawlController、开启爬虫的方法start、添加种子URL的方法addSeed。
+构造方法中对爬虫的配置做了一些初始化。
+{% highlight java %}
+	public CrawlController(CrawlConfig config, PageFetcher pageFetcher, RobotstxtServer robotstxtServer)
+			throws Exception {
+		super(config);
+		config.validate();//验证配置，配置不全则抛出异常
+		File folder = new File(config.getCrawlStorageFolder());//本地历史抓取记录文件
+		if (!folder.exists()) {
+			if (!folder.mkdirs()) {
+				throw new Exception("Couldn't create this folder: " + folder.getAbsolutePath());
+			}
+		}
 
+		boolean resumable = config.isResumableCrawling();//是否开启了增量抓取
+		/**
+		 * 初始化berkeley db
+		 */
+		EnvironmentConfig envConfig = new EnvironmentConfig();
+		envConfig.setAllowCreate(true);
+		envConfig.setTransactional(resumable);
+		envConfig.setLocking(resumable);
 
+		File envHome = new File(config.getCrawlStorageFolder() + "/frontier");
+		if (!envHome.exists()) {
+			if (!envHome.mkdir()) {
+				throw new Exception("Couldn't create this folder: " + envHome.getAbsolutePath());
+			}
+		}
+		if (!resumable) {
+			IO.deleteFolderContents(envHome);
+		}
 
+		Environment env = new Environment(envHome, envConfig);
+		docIdServer = new DocIDServer(env, config);
+		frontier = new Frontier(env, config, docIdServer);
+		this.pageFetcher = pageFetcher;
+		this.robotstxtServer = robotstxtServer;
+		finished = false;
+		shuttingDown = false;
+	}
 
+{% endhighlight %}
 
+开启爬虫的方法start：
+{% highlight java %}
+	protected <T extends WebCrawler> void start(final Class<T> _c, final int numberOfCrawlers, boolean isBlocking) {
+		try {
+			finished = false;
+			crawlersLocalData.clear();
+			final List<Thread> threads = new ArrayList<Thread>();
+			final List<T> crawlers = new ArrayList<T>();
+
+			for (int i = 1; i <= numberOfCrawlers; i++) {
+				T crawler = _c.newInstance();
+				Thread thread = new Thread(crawler, "Crawler " + i);
+				crawler.setThread(thread);
+				crawler.init(i, this);
+				thread.start();
+				crawlers.add(crawler);
+				threads.add(thread);
+				logger.info("Crawler " + i + " started.");
+			}
+
+			final CrawlController controller = this;
+
+			Thread monitorThread = new Thread(new Runnable() {
+
+				@Override
+				public void run() {
+					try {
+						synchronized (waitingLock) {
+
+							while (true) {
+								sleep(10);
+								boolean someoneIsWorking = false;
+								for (int i = 0; i < threads.size(); i++) {
+									Thread thread = threads.get(i);
+									if (!thread.isAlive()) {
+										if (!shuttingDown) {
+											logger.info("Thread " + i + " was dead, I'll recreate it.");
+											T crawler = _c.newInstance();
+											thread = new Thread(crawler, "Crawler " + (i + 1));
+											threads.remove(i);
+											threads.add(i, thread);
+											crawler.setThread(thread);
+											crawler.init(i + 1, controller);
+											thread.start();
+											crawlers.remove(i);
+											crawlers.add(i, crawler);
+										}
+									} else if (crawlers.get(i).isNotWaitingForNewURLs()) {
+										someoneIsWorking = true;
+									}
+								}
+								if (!someoneIsWorking) {
+									// Make sure again that none of the threads
+									// are
+									// alive.
+									logger.info("It looks like no thread is working, waiting for 10 seconds to make sure...");
+									sleep(10);
+
+									someoneIsWorking = false;
+									for (int i = 0; i < threads.size(); i++) {
+										Thread thread = threads.get(i);
+										if (thread.isAlive() && crawlers.get(i).isNotWaitingForNewURLs()) {
+											someoneIsWorking = true;
+										}
+									}
+									if (!someoneIsWorking) {
+										if (!shuttingDown) {
+											long queueLength = frontier.getQueueLength();
+											if (queueLength > 0) {
+												continue;
+											}
+											logger.info("No thread is working and no more URLs are in queue waiting for another 10 seconds to make sure...");
+											sleep(10);
+											queueLength = frontier.getQueueLength();
+											if (queueLength > 0) {
+												continue;
+											}
+										}
+
+										logger.info("All of the crawlers are stopped. Finishing the process...");
+										// At this step, frontier notifies the
+										// threads that were
+										// waiting for new URLs and they should
+										// stop
+										frontier.finish();
+										for (T crawler : crawlers) {
+											crawler.onBeforeExit();
+											crawlersLocalData.add(crawler.getMyLocalData());
+										}
+
+										logger.info("Waiting for 10 seconds before final clean up...");
+										sleep(10);
+
+										frontier.close();
+										docIdServer.close();
+										pageFetcher.shutDown();
+
+										finished = true;
+										waitingLock.notifyAll();
+
+										return;
+									}
+								}
+							}
+						}
+					} catch (Exception e) {
+						e.printStackTrace();
+					}
+				}
+			});
+
+			monitorThread.start();
+
+			if (isBlocking) {
+				waitUntilFinish();
+			}
+
+		} catch (Exception e) {
+			e.printStackTrace();
+		}
+	}
+{% endhighlight %}
+
+添加种子URL的方法addSeed：
+{% highlight java %}
+	public void addSeed(String pageUrl, int docId) {
+		//将URL规范化
+		String canonicalUrl = URLCanonicalizer.getCanonicalURL(pageUrl);
+		if (canonicalUrl == null) {
+			logger.error("Invalid seed URL: " + pageUrl);
+			return;
+		}
+		if (docId < 0) {
+			//检查此URL是否已经抓取过
+			docId = docIdServer.getDocId(canonicalUrl);
+			if (docId > 0) {
+				// This URL is already seen.
+				return;
+			}
+			docId = docIdServer.getNewDocID(canonicalUrl);
+		} else {
+			try {
+				//存入berkeley db
+				docIdServer.addUrlAndDocId(canonicalUrl, docId);
+			} catch (Exception e) {
+				logger.error("Could not add seed: " + e.getMessage());
+			}
+		}
+
+		WebURL webUrl = new WebURL();
+		webUrl.setURL(canonicalUrl);
+		webUrl.setDocid(docId);
+		webUrl.setDepth((short) 0);
+		//依据robots协议，此网址是否可以抓取
+		if (!robotstxtServer.allows(webUrl)) {
+			logger.info("Robots.txt does not allow this seed: " + pageUrl);
+		} else {
+			//加入调度器
+			frontier.schedule(webUrl);
+		}
+	}
+
+{% endhighlight %}
+
+**WebCrawler**类：
 
 
 
