新增爬虫十五

--- a/_posts/spider/2014-12-10-细说垂直型网络爬虫（十五）【源码解读之Crawl4J（2）】.md
+++ b/_posts/spider/2014-12-10-细说垂直型网络爬虫（十五）【源码解读之Crawl4J（2）】.md
@@ -406,13 +406,198 @@ edu.uci.ics.crawler4j.crawler包主要负责爬虫的配置和控制，包括的
 {% endhighlight %}
 
 **WebCrawler**类：
+主要属性：
+{% highlight java %}
+/**
+	 * The id associated to the crawler thread running this instance
+	 */
+	protected int myId;
 
+	/**
+	 * 爬行控制器 监听各个爬虫的运行状态并向URL队列添加新的URL
+	 * The controller instance that has created this crawler thread. This
+	 * reference to the controller can be used for getting configurations of the
+	 * current crawl or adding new seeds during runtime.
+	 */
+	protected CrawlController myController;
 
+	/**
+	 * The thread within which this crawler instance is running.
+	 */
+	private Thread myThread;
 
+	/**
+	 * 从页面中提取内容
+	 * The parser that is used by this crawler instance to parse the content of
+	 * the fetched pages.
+	 */
+	private Parser parser;
 
+	/**
+	 * 从网上提取内容
+	 * The fetcher that is used by this crawler instance to fetch the content of
+	 * pages from the web.
+	 */
+	private PageFetcher pageFetcher;
 
+	/**
+	 * 读取robots协议，获取是否可以抓取的信息
+	 * The RobotstxtServer instance that is used by this crawler instance to
+	 * determine whether the crawler is allowed to crawl the content of each
+	 * page.
+	 */
+	private RobotstxtServer robotstxtServer;
 
+	/**
+	 * The DocIDServer that is used by this crawler instance to map each URL to
+	 * a unique docid.
+	 */
+	private DocIDServer docIdServer;
 
+	/**
+	 * 管理抓取队列
+	 * The Frontier object that manages the crawl queue.
+	 */
+	private Frontier frontier;
 
+	/**
+	 * Is the current crawler instance waiting for new URLs? This field is
+	 * mainly used by the controller to detect whether all of the crawler
+	 * instances are waiting for new URLs and therefore there is no more work
+	 * and crawling can be stopped.
+	 */
+	private boolean isWaitingForNewURLs;
+{% endhighlight %}
 
+run方法：
+{% highlight java %}
+	public void run() {
+		onStart();//调用onStart()
+		while (true) {
+			List<WebURL> assignedURLs = new ArrayList<WebURL>(50);
+			isWaitingForNewURLs = true;//将等待新URL设置为TRUE
+			frontier.getNextURLs(50, assignedURLs);//加载URLS到assignedURLs中
+			isWaitingForNewURLs = false;//将等待新URL设置为false
+			if (assignedURLs.size() == 0) {
+				if (frontier.isFinished()) {
+					return;
+				}
+				try {
+					Thread.sleep(3000);
+				} catch (InterruptedException e) {
+					e.printStackTrace();
+				}
+			} else {
+				for (WebURL curURL : assignedURLs) {
+					if (curURL != null) {
+						processPage(curURL);
+						frontier.setProcessed(curURL);
+					}
+					if (myController.isShuttingDown()) {
+						logger.info("Exiting because of controller shutdown.");
+						return;
+					}
+				}
+			}
+		}
+	}
+{% endhighlight %}
 
+页面处理：
+
+{% highlight java %}
+	private void processPage(WebURL curURL) {
+		if (curURL == null) {
+			return;
+		}
+		PageFetchResult fetchResult = null;
+		try {
+			fetchResult = pageFetcher.fetchHeader(curURL);
+			int statusCode = fetchResult.getStatusCode();//获取到页面的状态
+			handlePageStatusCode(curURL, statusCode, CustomFetchStatus.getStatusDescription(statusCode));
+			if (statusCode != HttpStatus.SC_OK) {
+				if (statusCode == HttpStatus.SC_MOVED_PERMANENTLY || statusCode == HttpStatus.SC_MOVED_TEMPORARILY) {
+					//HttpStatus.SC_MOVED_PERMANENTLY:客户请求的文档在其他地方，新的URL在Location头中给出，浏览器应该自动地访问新的URL。
+					//HttpStatus.SC_MOVED_TEMPORARILY:类似于301，但新的URL应该被视为临时性的替代，而不是永久性的。
+					if (myController.getConfig().isFollowRedirects()) {
+						String movedToUrl = fetchResult.getMovedToUrl();
+						if (movedToUrl == null) {
+							return;
+						}
+						int newDocId = docIdServer.getDocId(movedToUrl);
+						if (newDocId > 0) {
+							// Redirect page is already seen
+							//重定向的网址已经被抓取
+							return;
+						} else {
+							WebURL webURL = new WebURL();
+							webURL.setURL(movedToUrl);
+							webURL.setParentDocid(curURL.getParentDocid());
+							webURL.setParentUrl(curURL.getParentUrl());
+							webURL.setDepth(curURL.getDepth());
+							webURL.setDocid(-1);
+							if (shouldVisit(webURL) && robotstxtServer.allows(webURL)) {
+								webURL.setDocid(docIdServer.getNewDocID(movedToUrl));
+								frontier.schedule(webURL);
+							}
+						}
+					}
+				} else if (fetchResult.getStatusCode() == CustomFetchStatus.PageTooBig) {
+					logger.info("Skipping a page which was bigger than max allowed size: " + curURL.getURL());
+				}
+				return;
+			}
+
+			if (!curURL.getURL().equals(fetchResult.getFetchedUrl())) {
+				if (docIdServer.isSeenBefore(fetchResult.getFetchedUrl())) {
+					// Redirect page is already seen
+					return;
+				}
+				curURL.setURL(fetchResult.getFetchedUrl());
+				curURL.setDocid(docIdServer.getNewDocID(fetchResult.getFetchedUrl()));
+			}
+
+			Page page = new Page(curURL);
+			int docid = curURL.getDocid();
+			if (fetchResult.fetchContent(page) && parser.parse(page, curURL.getURL())) {
+				ParseData parseData = page.getParseData();
+				if (parseData instanceof HtmlParseData) {
+					HtmlParseData htmlParseData = (HtmlParseData) parseData;
+
+					List<WebURL> toSchedule = new ArrayList<WebURL>();
+					int maxCrawlDepth = myController.getConfig().getMaxDepthOfCrawling();
+					for (WebURL webURL : htmlParseData.getOutgoingUrls()) {
+						webURL.setParentDocid(docid);
+						webURL.setParentUrl(curURL.getURL());
+						int newdocid = docIdServer.getDocId(webURL.getURL());
+						if (newdocid > 0) {
+							// This is not the first time that this Url is
+							// visited. So, we set the depth to a negative
+							// number.
+							webURL.setDepth((short) -1);
+							webURL.setDocid(newdocid);
+						} else {
+							webURL.setDocid(-1);
+							webURL.setDepth((short) (curURL.getDepth() + 1));
+							if (maxCrawlDepth == -1 || curURL.getDepth() < maxCrawlDepth) {
+								if (shouldVisit(webURL) && robotstxtServer.allows(webURL)) {
+									webURL.setDocid(docIdServer.getNewDocID(webURL.getURL()));
+									toSchedule.add(webURL);
+								}
+							}
+						}
+					}
+					frontier.scheduleAll(toSchedule);
+				}
+				visit(page);
+			}
+		} catch (Exception e) {
+			e.printStackTrace();
+			logger.error(e.getMessage() + ", while processing: " + curURL.getURL());
+		} finally {
+			if (fetchResult != null) {
+				fetchResult.discardContentIfNotConsumed();
+			}
+		}
+	}
+{% endhighlight %}
