修改爬虫十五

--- a/_posts/spider/2014-12-10-细说垂直型网络爬虫（十五）【源码解读之Crawl4J（2）】.md
+++ b/_posts/spider/2014-12-10-细说垂直型网络爬虫（十五）【源码解读之Crawl4J（2）】.md
@@ -18,6 +18,8 @@ Crawl4J是一个开源的Java爬虫程序，总共才三十多个类，比较简
 ###2.edu.uci.ics.crawler4j.crawler包
 edu.uci.ics.crawler4j.crawler包主要负责爬虫的配置和控制，包括的类有：抽象的配置类Configurable、配置类CrawlConfig、爬虫控
 制类CrawlController、页面Page和爬虫实现逻辑WebCrawler
+![开源爬虫Crawl4J的Crawler包](/res/img/blogimg/2014121101.jpg)
+
 先看看**CrawlConfig**类，了解Crawl4J有哪些基本的配置，Crawl4J使用berkeley db来存储抓取的临时数据，如抓取过程中的URL,这样依赖
 就可以进行断点抓取。
 {% highlight java %}
