--- a/_posts/spider/2014-12-9-细说垂直型网络爬虫（十四）【源码解读之Crawl4J（1）】.md
+++ b/_posts/spider/2014-12-9-细说垂直型网络爬虫（十四）【源码解读之Crawl4J（1）】.md
@@ -25,6 +25,8 @@ edu.uci.ics.crawler4j.robotstxt robots.txt协议相关
 edu.uci.ics.crawler4j.url URL相关（WebURL）
 edu.uci.ics.crawler4j.util 工具类
 
+![Crawl4J主要的包](/res/img/blogimg/2014121102.jpg)
+
 ###利用Crawl4J抓取一个网站
 继承WebCrawler,重写shouldVisit和visit方法：
 {% highlight java %}
