--- a/_posts/spider/2014-12-9-细说垂直型网络爬虫（十四）【源码解读之Crawl4J（1）】.md
+++ b/_posts/spider/2014-12-9-细说垂直型网络爬虫（十四）【源码解读之Crawl4J（1）】.md
@@ -10,7 +10,7 @@ date: 2014-12-9
 
 标签： 网络爬虫 开源爬虫源码解读 Crawl4J
 
-###Crawl4J简介
+###1.Crawl4J简介
 Crawl4J是一个开源的Java爬虫程序，总共才三十多个类，比较简单，非常适合爬虫入门的学习。
 
 <!-- more -->
@@ -27,7 +27,7 @@ edu.uci.ics.crawler4j.util 工具类
 
 ![Crawl4J主要的包](/res/img/blogimg/2014121102.png)
 
-###利用Crawl4J抓取一个网站
+###2.利用Crawl4J抓取一个网站
 继承WebCrawler,重写shouldVisit和visit方法：
 {% highlight java %}
 public class MyCrawler extends WebCrawler{
