新增爬虫十六

--- a/_posts/spider/2014-12-11-细说垂直型网络爬虫（十六）【源码解读之Crawl4J（3）】.md
+++ b/_posts/spider/2014-12-11-细说垂直型网络爬虫（十六）【源码解读之Crawl4J（3）】.md
@@ -16,8 +16,12 @@ Crawl4J是一个开源的Java爬虫程序，总共才三十多个类，比较简
 <!-- more -->
 
 ###2.edu.uci.ics.crawler4j.fetcher包
-
-
+fetcher包主要负责的逻辑就是依据URL从网络上获取到对应的页面信息。
+fetcher包中有四个类：
+CustomFetchStatus：HTTP状态码相关
+IdleConnectionMonitorThread：闲置连接的监控线程
+PageFetcher：获取页面信息
+PageFetchResult：获取到的页面信息的初步处理
 
 
 
