修改爬虫十六

--- a/_posts/spider/2014-12-11-细说垂直型网络爬虫（十六）【源码解读之Crawl4J（3）】.md
+++ b/_posts/spider/2014-12-11-细说垂直型网络爬虫（十六）【源码解读之Crawl4J（3）】.md
@@ -23,6 +23,10 @@ IdleConnectionMonitorThread：闲置连接的监控线程
 PageFetcher：获取页面信息
 PageFetchResult：获取到的页面信息的初步处理
 
+![开源爬虫Crawl4J的Crawler包](/res/img/blogimg/2014121103.png)
+
+
+
 
 
 
