--- a/_posts/spider/2014-12-11-细说垂直型网络爬虫（十六）【源码解读之Crawl4J（3）】.md
+++ b/_posts/spider/2014-12-11-细说垂直型网络爬虫（十六）【源码解读之Crawl4J（3）】.md
@@ -25,11 +25,255 @@ PageFetchResult：获取到的页面信息的初步处理
 
 ![开源爬虫Crawl4J的Crawler包](/res/img/blogimg/2014121103.png)
 
+（请注意：下面我将无耻的贴很多代码）
+**CustomFetchStatus**里面主要是抓取状态：
+{% highlight java %}
+	public static final int PageTooBig = 1001;
+	public static final int FatalTransportError = 1005;
+	public static final int UnknownError = 1006;
 
+	public static String getStatusDescription(int code) {
+		switch (code) {
+		case HttpStatus.SC_OK:
+			return "OK";
+		case HttpStatus.SC_CREATED:
+			return "Created";
+		case HttpStatus.SC_ACCEPTED:
+			return "Accepted";
 
+        ……
 
+		case UnknownError:
+			return "Unknown error";
+		default:
+			return "(" + code + ")";
+		}
+	}
+{% endhighlight %}
 
+**PageFetchResult**抓取到的信息的实体：
+主要属性有：
 
+{% highlight java %}
+	protected int statusCode;
+	protected HttpEntity entity = null;
+	protected String fetchedUrl = null;
+	protected String movedToUrl = null;
+{% endhighlight %}
+
+除了get/set外主要的方法有：
+{% highlight java %}
+	public boolean fetchContent(Page page) {
+		try {
+			page.load(entity);//加载抓取到的信息到Page实体
+			return true;
+		} catch (Exception e) {
+			logger.info("Exception while fetching content for: " + page.getWebURL().getURL() + " [" + e.getMessage()
+					+ "]");
+		}
+		return false;
+	}
+
+	public void discardContentIfNotConsumed() {
+		try {
+			if (entity != null) {
+				EntityUtils.consume(entity);//关闭流
+			}
+		} catch (Exception e) {
+			e.printStackTrace();
+		}
+	}
+{% endhighlight %}
+
+**IdleConnectionMonitorThread**主要是监控过期和超时的连接
+主要的代码有：
+{% highlight java %}
+	//用来支持多线程使用HttpClient
+    private final ThreadSafeClientConnManager connMgr;
+    private volatile boolean shutdown;
+
+    public IdleConnectionMonitorThread(ThreadSafeClientConnManager connMgr) {
+        super("Connection Manager");
+        this.connMgr = connMgr;
+    }
+
+    @Override
+    public void run() {
+        try {
+            while (!shutdown) {
+                synchronized (this) {
+                    wait(5000);
+                    // Close expired connections
+                    // 关闭过期的连接
+                    connMgr.closeExpiredConnections();
+                 // 关闭空闲时间超过30秒的连接
+                    connMgr.closeIdleConnections(30, TimeUnit.SECONDS);
+                }
+            }
+        } catch (InterruptedException ex) {
+        }
+    }
+{% endhighlight %}
+
+**PageFetcher**主要负责从网络上获取页面数据：
+主要的属性和方法有：
+{% highlight java %}
+	protected ThreadSafeClientConnManager connectionManager;//多连接的线程安全的管理器
+	protected DefaultHttpClient httpClient;
+	protected final Object mutex = new Object();
+	protected long lastFetchTime = 0;
+	protected IdleConnectionMonitorThread connectionMonitorThread = null;//连接监视线程
+
+		public PageFetcher(CrawlConfig config) {
+    		super(config);
+    		HttpParams params = new BasicHttpParams();
+    		HttpProtocolParamBean paramsBean = new HttpProtocolParamBean(params);//http协议参数
+    		paramsBean.setVersion(HttpVersion.HTTP_1_1);
+    		paramsBean.setContentCharset("UTF-8");
+    		paramsBean.setUseExpectContinue(false);
+    		params.setParameter(CoreProtocolPNames.USER_AGENT, config.getUserAgentString());//设置user-agent
+    		params.setIntParameter(CoreConnectionPNames.SO_TIMEOUT, config.getSocketTimeout());//设置SocketTimeout
+    		params.setIntParameter(CoreConnectionPNames.CONNECTION_TIMEOUT, config.getConnectionTimeout());//设置ConnectionTimeout
+    		params.setBooleanParameter("http.protocol.handle-redirects", false);//不处理重定向
+    		SchemeRegistry schemeRegistry = new SchemeRegistry();
+    		schemeRegistry.register(new Scheme("http", 80, PlainSocketFactory.getSocketFactory()));
+
+    		if (config.isIncludeHttpsPages()) {
+    			schemeRegistry.register(new Scheme("https", 443, SSLSocketFactory.getSocketFactory()));
+    		}
+    		connectionManager = new ThreadSafeClientConnManager(schemeRegistry);
+    		connectionManager.setMaxTotal(config.getMaxTotalConnections());//最大连接数
+    		connectionManager.setDefaultMaxPerRoute(config.getMaxConnectionsPerHost());//每个host的最大连接数
+    		httpClient = new DefaultHttpClient(connectionManager, params);
+    		if (config.getProxyHost() != null) {
+    			if (config.getProxyUsername() != null) {//如果使用了代理
+    				httpClient.getCredentialsProvider().setCredentials(
+    						new AuthScope(config.getProxyHost(), config.getProxyPort()),
+    						new UsernamePasswordCredentials(config.getProxyUsername(), config.getProxyPassword()));
+    			}
+    			HttpHost proxy = new HttpHost(config.getProxyHost(), config.getProxyPort());
+    			httpClient.getParams().setParameter(ConnRoutePNames.DEFAULT_PROXY, proxy);
+            }
+
+            httpClient.addResponseInterceptor(new HttpResponseInterceptor() {//设置响应拦截器
+
+                @Override
+                public void process(final HttpResponse response, final HttpContext context) throws HttpException,
+                        IOException {
+                    HttpEntity entity = response.getEntity();
+                    Header contentEncoding = entity.getContentEncoding();
+                    if (contentEncoding != null) {
+                        HeaderElement[] codecs = contentEncoding.getElements();
+                        for (HeaderElement codec : codecs) {
+                            if (codec.getName().equalsIgnoreCase("gzip")) {
+                                response.setEntity(new GzipDecompressingEntity(response.getEntity()));
+                                return;
+                            }
+                        }
+                    }
+                }
+            });
+    		if (connectionMonitorThread == null) {
+    			connectionMonitorThread = new IdleConnectionMonitorThread(connectionManager);
+    		}
+    		connectionMonitorThread.start();
+    	}
+    		public PageFetchResult fetchHeader(WebURL webUrl) {
+        		PageFetchResult fetchResult = new PageFetchResult();
+        		String toFetchURL = webUrl.getURL();
+        		HttpGet get = null;
+        		try {
+        			get = new HttpGet(toFetchURL);
+        			synchronized (mutex) {
+        				long now = (new Date()).getTime();
+        				if (now - lastFetchTime < config.getPolitenessDelay()) {//控制连续发起两次同样的请求的时间间隔
+        					Thread.sleep(config.getPolitenessDelay() - (now - lastFetchTime));
+        				}
+        				lastFetchTime = (new Date()).getTime();
+        			}
+        			get.addHeader("Accept-Encoding", "gzip");
+        			HttpResponse response = httpClient.execute(get);
+        			fetchResult.setEntity(response.getEntity());
+
+        			int statusCode = response.getStatusLine().getStatusCode();
+        			if (statusCode != HttpStatus.SC_OK) {
+        				if (statusCode != HttpStatus.SC_NOT_FOUND) {
+        					//301 302 客户请求的文档在其他地方，新的URL在Location头中给出
+        					if (statusCode == HttpStatus.SC_MOVED_PERMANENTLY || statusCode == HttpStatus.SC_MOVED_TEMPORARILY) {
+        						Header header = response.getFirstHeader("Location");
+        						if (header != null) {
+        							String movedToUrl = header.getValue();
+        							movedToUrl = URLCanonicalizer.getCanonicalURL(movedToUrl, toFetchURL);//处理URL
+        							fetchResult.setMovedToUrl(movedToUrl);
+        						}
+        						fetchResult.setStatusCode(statusCode);
+        						return fetchResult;
+        					}
+        					logger.info("Failed: " + response.getStatusLine().toString() + ", while fetching " + toFetchURL);
+        				}
+        				fetchResult.setStatusCode(response.getStatusLine().getStatusCode());
+        				return fetchResult;
+        			}
+
+        			fetchResult.setFetchedUrl(toFetchURL);
+        			String uri = get.getURI().toString();
+        			if (!uri.equals(toFetchURL)) {
+        				if (!URLCanonicalizer.getCanonicalURL(uri).equals(toFetchURL)) {
+        					fetchResult.setFetchedUrl(uri);
+        				}
+        			}
+
+        			if (fetchResult.getEntity() != null) {
+        				long size = fetchResult.getEntity().getContentLength();
+        				if (size == -1) {
+        					Header length = response.getLastHeader("Content-Length");
+        					if (length == null) {
+        						length = response.getLastHeader("Content-length");
+        					}
+        					if (length != null) {
+        						size = Integer.parseInt(length.getValue());
+        					} else {
+        						size = -1;
+        					}
+        				}
+        				if (size > config.getMaxDownloadSize()) {
+        					fetchResult.setStatusCode(CustomFetchStatus.PageTooBig);
+        					return fetchResult;
+        				}
+
+        				fetchResult.setStatusCode(HttpStatus.SC_OK);
+        				return fetchResult;
+
+        			} else {
+        				get.abort();
+        			}
+        		} catch (IOException e) {
+        			logger.error("Fatal transport error: " + e.getMessage() + " while fetching " + toFetchURL
+        					+ " (link found in doc #" + webUrl.getParentDocid() + ")");
+        			fetchResult.setStatusCode(CustomFetchStatus.FatalTransportError);
+        			return fetchResult;
+        		} catch (IllegalStateException e) {
+        			// ignoring exceptions that occur because of not registering https
+        			// and other schemes
+        		} catch (Exception e) {
+        			if (e.getMessage() == null) {
+        				logger.error("Error while fetching " + webUrl.getURL());
+        			} else {
+        				logger.error(e.getMessage() + " while fetching " + webUrl.getURL());
+        			}
+        		} finally {
+        			try {
+        				if (fetchResult.getEntity() == null && get != null) {
+        					get.abort();
+        				}
+        			} catch (Exception e) {
+        				e.printStackTrace();
+        			}
+        		}
+        		fetchResult.setStatusCode(CustomFetchStatus.UnknownError);
+        		return fetchResult;
+        	}
+{% endhighlight %}
 
 
 
