--- a/_posts/杂记/2014-12-16-Git命令参考手册.md
+++ b/_posts/杂记/2014-12-16-Git命令参考手册.md
@@ -5,6 +5,7 @@ category : 杂记
 duoshuo: true
 date : 2014-12-16
 ---
+<!--more-->
 
 >
 git init                                                  # 初始化本地git仓库（创建新仓库）
