--- a/_posts/Scala/2014-12-15-Scala开发教程（四）【数组、映射和元组】.md
+++ b/_posts/Scala/2014-12-15-Scala开发教程（四）【数组、映射和元组】.md
@@ -20,6 +20,40 @@ date: 2014-12-15
 
 <!-- more -->
 
+##示例说明
+数组：Scala中的数组和Java中的数据类似，用来存储一些相同类型的变量。
+- 数组赋值：
+{% highlight scala %}
+val array=new Array[Int](3)
+array(0)=1
+array.update(1,2)
+{% endhighlight %}
+
+- 遍历数组
+{% highlight scala %}
+    val length=array.length
+    for(i<- 0 to length-1)
+      println(array(i))//array.apply(i)
+{% endhighlight %}
+
+映射：Scala中的映射和Java中的Map类似，用来存储键值对。
+{% highlight scala %}
+    val scores1 = Map("yi" -> 1, "er" -> 2, "san" -> 3)
+    println(scores1)
+    //创建一个内容可变的Map[String, Int]
+    val scores2 = scala.collection.mutable.Map("yi" -> 1)
+    scores2 += ("shi" -> 10, "qi" -> 7)
+    println(scores2)
+    val scores4 = Map(("shi", 10), ("san", 3), ("ba", 8))
+    //获取值
+    val bobsScore =scores4.get("ba")
+   println(bobsScore)
+{% endhighlight %}
+
+元组：元组是不同类型的值的聚集
+
+
+
 (未完待续)
 
 
