--- a/_posts/spider/2014-12-21-细说垂直型网络爬虫（十八）【源码解读之Crawl4J（5）】.md
+++ b/_posts/spider/2014-12-21-细说垂直型网络爬虫（十八）【源码解读之Crawl4J（5）】.md
@@ -20,7 +20,106 @@ Crawl4J是一个开源的Java爬虫程序，总共才三十多个类，比较简
 Parser包中的类主要负责将抓取到的数据解析出来。
 ![开源爬虫Crawl4J的parser包](/res/img/blogimg/2014121105-parser.png)
 
+parser包中最核心的方法是Parser类中的parse方法，parse方法实现的逻辑主要是构造Page对象
 
+{% highlight java %}
+	public boolean parse(Page page, String contextURL) {
+		//是否包含多媒体数据
+		if (Util.hasBinaryContent(page.getContentType())) {
+			if (!config.isIncludeBinaryContentInCrawling()) {//是否解析多媒体数据
+				return false;
+			} else {
+				page.setParseData(BinaryParseData.getInstance());
+				return true;
+			}
+		} else if (Util.hasPlainTextContent(page.getContentType())) {//text/plain类型
+			try {
+				TextParseData parseData = new TextParseData();
+				parseData.setTextContent(new String(page.getContentData(), page.getContentCharset()));
+				page.setParseData(parseData);//parseData
+				return true;
+			} catch (Exception e) {
+				e.printStackTrace();
+			}
+			return false;
+		}
 
+		Metadata metadata = new Metadata();
+		HtmlContentHandler contentHandler = new HtmlContentHandler();
+		InputStream inputStream = null;
+		try {
+			inputStream = new ByteArrayInputStream(page.getContentData());
+			htmlParser.parse(inputStream, contentHandler, metadata, parseContext);
+		} catch (Exception e) {
+			e.printStackTrace();
+		} finally {
+			try {
+				if (inputStream != null) {
+					inputStream.close();
+				}
+			} catch (IOException e) {
+				e.printStackTrace();
+			}
+		}
 
+		if (page.getContentCharset() == null) {
+			page.setContentCharset(metadata.get("Content-Encoding"));
+		}
+
+		HtmlParseData parseData = new HtmlParseData();
+		parseData.setText(contentHandler.getBodyText().trim());
+		parseData.setTitle(metadata.get(Metadata.TITLE));
+		//页面的子级页面URL
+		List<WebURL> outgoingUrls = new ArrayList<WebURL>();
+
+		String baseURL = contentHandler.getBaseUrl();
+		if (baseURL != null) {
+			contextURL = baseURL;
+		}
+		//处理页面中的URL
+		int urlCount = 0;
+		for (ExtractedUrlAnchorPair urlAnchorPair : contentHandler.getOutgoingUrls()) {
+			String href = urlAnchorPair.getHref();
+			href = href.trim();
+			if (href.length() == 0) {
+				continue;
+			}
+			String hrefWithoutProtocol = href.toLowerCase();
+			if (href.startsWith("http://")) {
+				hrefWithoutProtocol = href.substring(7);
+			}
+			if (!hrefWithoutProtocol.contains("javascript:") && !hrefWithoutProtocol.contains("@")) {
+				String url = URLCanonicalizer.getCanonicalURL(href, contextURL);
+				if (url != null) {
+					WebURL webURL = new WebURL();
+					webURL.setURL(url);
+					webURL.setAnchor(urlAnchorPair.getAnchor());
+					outgoingUrls.add(webURL);
+					urlCount++;
+					if (urlCount > config.getMaxOutgoingLinksToFollow()) {
+						break;
+					}
+				}
+			}
+		}
+
+		parseData.setOutgoingUrls(outgoingUrls);
+
+		try {
+			if (page.getContentCharset() == null) {
+				parseData.setHtml(new String(page.getContentData()));
+			} else {
+				parseData.setHtml(new String(page.getContentData(), page.getContentCharset()));
+			}
+		} catch (UnsupportedEncodingException e) {
+			e.printStackTrace();
+			return false;
+		}
+
+		page.setParseData(parseData);
+		return true;
+
+	}
+
+{% endhighlight %}
 
