新增服务定位器模式

--- a/_posts/DesignPattern/2014-12-23-设计模式之（六）【服务定位器模式】.md
+++ b/_posts/DesignPattern/2014-12-23-设计模式之（六）【服务定位器模式】.md
@@ -20,7 +20,7 @@ date: 2014-12-23
 
 ##类图和实现
 类图：
-![服务定位器模式](/res/img/blogimg/locator.jpg)
+![服务定位器模式](/res/img/blogimg/locator.png)
 
 代码：
 服务接口Service：
