--- a/_posts/DesignPattern/2014-12-23-设计模式之（六）【服务定位器模式】.md
+++ b/_posts/DesignPattern/2014-12-23-设计模式之（六）【服务定位器模式】.md
@@ -16,6 +16,8 @@ date: 2014-12-23
 
 ##应用场景
 >
+一个人出生后，会登记他的身份信息（出生地、出生日期、性别等），当这个人到了该上学的年龄，教育部门可能就需要通知其参加义务
+教育，当这个人到了一定的年龄需要服兵役了，国家则会通知他来服兵役……
 
 
 ##类图和实现
