新增MathJax数学公式编写方法

--- a/_posts/nlp/2014-12-24-自然语言处理-基础概念.md
+++ b/_posts/nlp/2014-12-24-自然语言处理-基础概念.md
@@ -6,6 +6,8 @@ date: 2014-12-24
 
 ---
 
+<!-- more -->
+
 1. TF（Term Frequency）
     TF（Term Frequency）：词项频率
     假设文档集中有N篇文档，f(i,j)为词项i在文档j中出现的频率（次数），于是，词项i在文档j中的词项频率可以定义为：
