修改自然语言处理一

--- a/_posts/nlp/2014-12-24-自然语言处理-基础概念.md
+++ b/_posts/nlp/2014-12-24-自然语言处理-基础概念.md
@@ -11,11 +11,11 @@ math: true
 1. TF（Term Frequency）
     TF（Term Frequency）：词项频率
     假设文档集中有N篇文档，f(i,j)为词项i在文档j中出现的频率（次数），于是，词项i在文档j中的词项频率可以定义为：
-    $$TF(i,j)=f(i,j)\over max(f(k,j))$$，也是就词项i在文档j中归一化的结果，其中归一化通过f(i,j)除以同一文档中出现次数最多的词项的频率来算，因此，TF值都是小于或等于1的。
+    $$TF(i,j)=\frac{f(i,j)}{max(f(k,j))} $$，也是就词项i在文档j中归一化的结果，其中归一化通过f(i,j)除以同一文档中出现次数最多的词项的频率来算，因此，TF值都是小于或等于1的。
 2.IDF（Inverse Document Frequency）
     IDF（Inverse Document Frequency）：逆文档频率
     同样假设文档集中有N篇文档， 如果词项i在n篇文档中出现，那么IDF可以定义为：IDF(i)=log2(N/n)。
-   $$ IDF(i)= \log 2 (N\over n) $$
+   $$ IDF(i)= \log 2 (\frac{N}{n}) $$
 3.TF.IDF
     TF.IDF表示词项频率乘以逆文档频率。
     基于TF和IDF的定义，词项i在文档j中的得分可以定义为TF(i,j)*IDF（i）,这样在一片文档中TF*IDF得分高的词项往往都是代表这篇文档主题的最佳词项。
