--- a/_posts/nlp/2014-12-24-自然语言处理（一）-TF.IDF.md
+++ b/_posts/nlp/2014-12-24-自然语言处理（一）-TF.IDF.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 自然语言处理-基础概念
+title: 自然语言处理（一）-TF.IDF
 category: 自然语言处理
 date: 2014-12-24
 math: true
@@ -16,19 +16,13 @@ math: true
 2.IDF（Inverse Document Frequency）
     IDF（Inverse Document Frequency）：逆文档频率
     同样假设文档集中有N篇文档， 如果词项i在n篇文档中出现，那么IDF可以定义为：
-   $$ IDF(i)= \log _2 (\frac{N}{n}) $$
+   $$ IDF(i)= \log (\frac{N}{n}) $$
 
 3.TF.IDF
     TF.IDF表示词项频率乘以逆文档频率。
     基于TF和IDF的定义，词项i在文档j中的得分可以定义为TF(i,j)*IDF（i）,这样在一片文档中TF*IDF得分高的词项往往都是代表这篇文档主题的最佳词项。
 
-4.TFC
 
-5.ITC
-
-6.熵权重
-
-7.TF-IWF
 
 
 
