--- a/_posts/Redis/2015-1-7-Redis基本命令.md
+++ b/_posts/Redis/2015-1-7-Redis基本命令.md
@@ -10,6 +10,22 @@ date : 2015-1-7
 <!-- more -->
 
 Redis是一个高性能的key-value内存数据库，官网：(http://redis.io/)[http://redis.io/]。
-Redis支持的数据类型有： strings, hashes, lists, sets, sorted sets, bitmaps 以及 hyperloglogs.
+Redis支持的数据类型有：
+- strings：字符串是一种最基本的Redis值类型。Redis字符串是二进制安全的，这意味着一个Redis字符串能包含任意类型的数据，
+一个字符串类型的值最多能存储512M字节的内容。
+- hashes：Redis Hashes是字符串字段和字符串值之间的映射，所以它们是完美的表示对象（eg:一个有名，姓，年龄等属性的用户）的数据类型。
+一个hash最多可以包含232-1 字段-值对（超过40亿）。
+- lists：Redis列表是简单的字符串列表，按照插入顺序排序。 你可以添加一个元素到列表的头部（左边）或者尾部（右边）。
+LPUSH命令插入一个新元素到列表头部，而RPUSH命令 插入一个新元素到列表的尾部。一个列表最多可以包含232-1个元素（4294967295，每个表超过40亿个元素）。
+- sets：Redis集合是一个无序的字符串合集。你可以以O(1) 的时间复杂度（无论集合中有多少元素时间复杂度都为常量）完成 添加，删除以及测试元素是否存在的操作。
+Redis集合有着不允许相同成员存在的优秀特性。向集合中多次添加同一元素，在集合中最终只会存在一个此元素。实际上这就意味着，在添加元素前，你并不需要事先进行检验此元素是否已经存在的操作。
+一个集合最多可以包含232-1个元素（4294967295，每个集合超过40亿个元素）。
+- sorted sets：Redis有序集合和Redis集合类似，是不包含 相同字符串的合集。它们的差别是，每个有序集合 的成员都关联着一个评分，这个评分用于把有序集 合中的成员按最低分到最高分排列。
+使用有序集合，你可以非常快地（O(log(N))）完成添加，删除和更新元素的操作。 因为元素是在插入时就排好序的，所以很快地通过评分(score)或者 位次(position)获得一个范围的元素。 访问有序集合的中间元素同样也是非常快的，因此你可以使用有序集合作为一个没用重复成员的智能列表。 在这个列表中， 你可以轻易地访问任何你需要的东西: 有序的元素，快速的存在性测试，快速访问集合中间元素！
+
+
+
+
 
 http://langgufu.iteye.com/blog/1434408
+http://www.redis.cn/topics/data-types.html#sorted-sets
