修改Redis基本命令

--- a/_posts/Redis/2015-1-7-Redis基本命令.md
+++ b/_posts/Redis/2015-1-7-Redis基本命令.md
@@ -9,7 +9,7 @@ date : 2015-1-7
 
 <!-- more -->
 
-Redis是一个高性能的key-value内存数据库，官网：(http://redis.io/)[http://redis.io/]。
+Redis是一个高性能的key-value内存数据库，官网：[http://redis.io/](http://redis.io/)。
 Redis支持的数据类型有：
 >
 - strings：字符串是一种最基本的Redis值类型。Redis字符串是二进制安全的，这意味着一个Redis字符串能包含任意类型的数据，
