修改Redis基本命令

--- a/_posts/Redis/2015-1-7-Redis基本命令.md
+++ b/_posts/Redis/2015-1-7-Redis基本命令.md
@@ -60,7 +60,10 @@ Redis集合有着不允许相同成员存在的优秀特性。向集合中多次
     Redis缓存使用的方式与memcache相同。
 
 
+参考文献：
+【1】[http://langgufu.iteye.com/blog/1434408](http://langgufu.iteye.com/blog/1434408)
 
-http://langgufu.iteye.com/blog/1434408
-http://www.redis.cn/topics/data-types.html#sorted-sets
-http://highscalability.com/blog/2011/7/6/11-common-web-use-cases-solved-in-redis.html
+【2】[http://www.redis.cn/topics/data-types.html#sorted-sets](http://www.redis.cn/topics/data-types.html#sorted-sets)
+
+【3】[http://highscalability.com/blog/2011/7/6/11-common-web-use-cases-solved-in-redis.html](http://highscalability.com/blog/2011/7/6/11-common-web-use-cases-solved-in-redis.html)
+
