修改redis命令大全

--- a/_posts/Redis/2015-1-11-Redis命令大全.md
+++ b/_posts/Redis/2015-1-11-Redis命令大全.md
@@ -75,3 +75,90 @@ redis> MGET key1 key2 key3
 {% endhighlight %}
 - setex 设置key对应字符串value，并且设置key在给定的seconds时间之后超时过期。
 - strlen 返回key的string类型value的长度。
+
+##Hashs相关操作
+>
+- hset/hget 赋值和取值
+{% highlight sql %}
+redis> HSET myhash field1 "Hello"
+(integer) 1
+redis> HGET myhash field1
+"Hello"
+{% endhighlight %}
+- hdel 从 key 指定的哈希集中移除指定的域。
+- hexists 指定key的哈希集中是否存在指定的字段。
+- hgetall 返回 key 指定的哈希集中所有的字段和值。返回值中，每个字段名的下一个是它的值。
+{% highlight sql %}
+redis> HSET myhash field1 "Hello"
+(integer) 1
+redis> HSET myhash field2 "World"
+(integer) 1
+redis> HGETALL myhash
+1) "field1"
+2) "Hello"
+3) "field2"
+4) "World"
+{% endhighlight %}
+- hincrby 增加 key 指定的哈希集中指定字段的数值。如果 key 不存在，会创建一个新的哈希集并与 key 关联。如果字段不存在，则字段的值在该操作执行前被设置为 0
+{% highlight sql %}
+redis> HSET myhash field 5
+(integer) 1
+redis> HINCRBY myhash field 1
+(integer) 6
+redis> HINCRBY myhash field -1
+(integer) 5
+redis> HINCRBY myhash field -10
+(integer) -5
+{% endhighlight %}
+- hincrbyfloat 增加 key 指定的哈希集中指定字段的浮点型数值。
+{% highlight sql %}
+redis> HSET mykey field 10.50
+(integer) 1
+redis> HINCRBYFLOAT mykey field 0.1
+"10.6"
+redis> HSET mykey field 5.0e3
+(integer) 0
+redis> HINCRBYFLOAT mykey field 2.0e2
+"5200"
+{% endhighlight %}
+- hkeys 返回 key 指定的哈希集中所有字段的名字。
+{% highlight sql %}
+redis> HSET myhash field1 "Hello"
+(integer) 1
+redis> HSET myhash field2 "World"
+(integer) 1
+redis> HKEYS myhash
+1) "field1"
+2) "field2"
+{% endhighlight %}
+- hvals 返回 key 指定的哈希集中所有字段的值。
+{% highlight sql %}
+redis> HSET myhash field1 "Hello"
+(integer) 1
+redis> HSET myhash field2 "World"
+(integer) 1
+redis> HVALS myhash
+1) "Hello"
+2) "World"
+{% endhighlight %}
+- hlen 返回 key 指定的哈希集包含的字段的数量。
+- hmset/hmget 批量赋值和取值
+{% highlight sql %}
+redis> HMSET myhash field1 "Hello" field2 "World"
+OK
+redis> HMGET myhash field1 field2 nofield
+1) "Hello"
+2) "World"
+3) (nil)
+{% endhighlight %}
+- hsetnx 只在 key 指定的哈希集中不存在指定的字段时，设置字段的值。如果 key 指定的哈希集不存在，会创建一个新的哈希集并与 key 关联。如果字段已存在，该操作无效果。
+{% highlight sql %}
+redis> HSETNX myhash field "Hello"
+(integer) 1
+redis> HSETNX myhash field "World"
+(integer) 0
+redis> HGET myhash field
+"Hello"
+{% endhighlight %}
+
+
