修改redis命令大全

--- a/_posts/Redis/2015-1-11-Redis命令大全.md
+++ b/_posts/Redis/2015-1-11-Redis命令大全.md
@@ -161,4 +161,10 @@ redis> HGET myhash field
 "Hello"
 {% endhighlight %}
 
+##List相关操作
+>
+- lpush/ rpush 向存于 key 的列表的头部/尾部插入所有指定的值。如果 key 不存在，那么会创建一个空的列表然后再进行 push 操作。 当 key 保存的不是一个列表，那么会返回一个错误。
+              可以使用一个命令把多个元素打入队列，只需要在命令后面指定多个参数。
+- lpop/rpop 移除并且返回 key 对应的 list 的第一个/最后元素。
+- lpushe/rpushe 只有当 key 已经存在并且存着一个 list 的时候，在这个 key 下面的 list 的头部/尾部插入 value。当 key 不存在的时候不会进行任何操作。
 
