--- a/_posts/Redis/2015-1-11-Redis命令大全.md
+++ b/_posts/Redis/2015-1-11-Redis命令大全.md
@@ -167,4 +167,166 @@ redis> HGET myhash field
               可以使用一个命令把多个元素打入队列，只需要在命令后面指定多个参数。
 - lpop/rpop 移除并且返回 key 对应的 list 的第一个/最后元素。
 - lpushe/rpushe 只有当 key 已经存在并且存着一个 list 的时候，在这个 key 下面的 list 的头部/尾部插入 value。当 key 不存在的时候不会进行任何操作。
+- blpop/brpop  lpop/rpop的阻塞版本。
+- rpoplpush rpoplpush source destination 原子性地返回并移除存储在 source 的列表的最后一个元素（列表尾部元素）， 并把该元素放入存储在 destination 的列表的第一个元素位置（列表头部）。
+{% highlight sql %}
+redis> RPUSH mylist "one"
+(integer) 1
+redis> RPUSH mylist "two"
+(integer) 2
+redis> RPUSH mylist "three"
+(integer) 3
+redis> RPOPLPUSH mylist myotherlist
+"three"
+redis> LRANGE mylist 0 -1
+1) "one"
+2) "two"
+redis> LRANGE myotherlist 0 -1
+1) "three"
+{% endhighlight %}
+- brpoplpush rpoplpush的阻塞版本。
+- lindex lindex key index 返回指定key的指定位置的值。
+- linsert linsert key before/after pivot value 把 value 插入存于 key 的列表中在基准值 pivot 的前面或后面。
+{% highlight sql %}
+redis> RPUSH mylist "Hello"
+(integer) 1
+redis> RPUSH mylist "World"
+(integer) 2
+redis> LINSERT mylist BEFORE "World" "There"
+(integer) 3
+redis> LRANGE mylist 0 -1
+1) "Hello"
+2) "There"
+3) "World"
+{% endhighlight %}
+- lrange lrange key start stop 返回存储在 key 的列表里指定范围内的元素。
+{% highlight sql %}
+redis> RPUSH mylist "one"
+(integer) 1
+redis> RPUSH mylist "two"
+(integer) 2
+redis> RPUSH mylist "three"
+(integer) 3
+redis> LRANGE mylist 0 0
+1) "one"
+redis> LRANGE mylist -3 2
+1) "one"
+2) "two"
+3) "three"
+redis> LRANGE mylist -100 100
+1) "one"
+2) "two"
+3) "three"
+redis> LRANGE mylist 5 10
+(empty list or set)
+{% endhighlight %}
+- lrem lrem key count value 从存于 key 的列表里移除前 count 次出现的值为 value 的元素。
+{% highlight sql %}
+redis> RPUSH mylist "hello"
+(integer) 1
+redis> RPUSH mylist "hello"
+(integer) 2
+redis> RPUSH mylist "foo"
+(integer) 3
+redis> RPUSH mylist "hello"
+(integer) 4
+redis> LREM mylist -2 "hello"
+(integer) 2
+redis> LRANGE mylist 0 -1
+1) "hello"
+2) "foo"
+{% endhighlight %}
+- ltrim ltrim key start stop 修剪(trim)一个已存在的 list，这样 list 就会只包含指定范围的指定元素。
+{% highlight sql %}
+redis> RPUSH mylist "one"
+(integer) 1
+redis> RPUSH mylist "two"
+(integer) 2
+redis> RPUSH mylist "three"
+(integer) 3
+redis> LTRIM mylist 1 -1
+OK
+redis> LRANGE mylist 0 -1
+1) "two"
+2) "three"
+{% endhighlight %}
+
+##Set相关操作
+>
+- sadd :sadd key member [member ...] 添加一个或多个指定的member元素到集合的 key中.指定的一个或者多个元素member 如果已经在集合key中存在则忽略.
+{% highlight sql %}
+redis> SADD myset "Hello"
+(integer) 1
+redis> SADD myset "World"
+(integer) 1
+redis> SADD myset "World"
+(integer) 0
+redis> SMEMBERS myset
+1) "World"
+2) "Hello"
+{% endhighlight %}
+- scard:scard key 返回集合的大小
+- sdiff:SDIFF key [key ...] 返回一个集合与给定集合的差集的元素.
+{% highlight sql %}
+redis> SADD key1 "a"
+(integer) 1
+redis> SADD key1 "b"
+(integer) 1
+redis> SADD key1 "c"
+(integer) 1
+redis> SADD key2 "c"
+(integer) 1
+redis> SADD key2 "d"
+(integer) 1
+redis> SADD key2 "e"
+(integer) 1
+redis> SDIFF key1 key2
+1) "a"
+2) "b"
+{% endhighlight %}
+- sdiff: SDIFFSTORE destination key [key ...] 该命令类似于 SDIFF, 不同之处在于该命令不返回结果集，而是将结果存放在destination集合中.
+- sinter:SINTER key [key ...] 返回指定所有的集合的成员的交集.
+{% highlight sql %}
+redis> SADD key1 "a"
+(integer) 1
+redis> SADD key1 "b"
+(integer) 1
+redis> SADD key1 "c"
+(integer) 1
+redis> SADD key2 "c"
+(integer) 1
+redis> SADD key2 "d"
+(integer) 1
+redis> SADD key2 "e"
+(integer) 1
+redis> SINTER key1 key2
+1) "c"
+{% endhighlight %}
+- sinterstore SINTERSTORE destination key [key ...] 这个命令与SINTER命令类似, 但是它并不是直接返回结果集,而是将结果保存在 destination集合中.
+- sismember SISMEMBER key member 返回成员 member 是否是存储的集合 key的成员.
+- smembers SMEMBERS key 返回key集合所有的元素.
+- smove SMOVE source destination member 将member从source集合移动到destination集合中.
+{% highlight sql %}
+redis> SADD myset "one"
+(integer) 1
+redis> SADD myset "two"
+(integer) 1
+redis> SADD myotherset "three"
+(integer) 1
+redis> SMOVE myset myotherset "two"
+(integer) 1
+redis> SMEMBERS myset
+1) "one"
+redis> SMEMBERS myotherset
+1) "three"
+2) "two"
+{% endhighlight %}
+- spop SPOP key 移除并返回一个集合中的随机元素
+- sranmember SRANDMEMBER key [count] 仅提供key参数,那么随机返回key集合中的一个元素.
+  Redis 2.6开始, 可以接受 count 参数,如果count是整数且小于元素的个数，
+  返回含有 count 个不同的元素的数组,如果count是个整数且大于集合中元素的个数时,仅返回整个集合的所有元素,
+  当count是负数,则会返回一个包含count的绝对值的个数元素的数组，如果count的绝对值大于元素的个数,则返回的结果集里会出现一个元素出现多次的情况.
+- srem SREM key member [member ...] 在key集合中移除指定的元素.
+- sunion SUNION key [key ...] 返回给定的多个集合的并集中的所有成员.
+- sunionstore 该命令作用类似于SUNION命令,不同的是它并不返回结果集,而是将结果存储在destination集合中.
 
