修改redis命令大全

--- a/_posts/Redis/2015-1-11-Redis命令大全.md
+++ b/_posts/Redis/2015-1-11-Redis命令大全.md
@@ -330,3 +330,9 @@ redis> SMEMBERS myotherset
 - sunion SUNION key [key ...] 返回给定的多个集合的并集中的所有成员.
 - sunionstore 该命令作用类似于SUNION命令,不同的是它并不返回结果集,而是将结果存储在destination集合中.
 
+##Sorted Set
+>
+- zadd ZADD key score member [score member ...] 该命令添加指定的成员到key对应的有序集合中，每个成员都有一个分数。
+- zcard 返回key的有序集元素个数。
+- zount ZCOUNT key min max 返回有序集key中，score值在min和max之间(默认包括score值等于min或max)的成员。
+- zincrby ZINCRBY key increment member 为有序集key的成员member的score值加上增量increment。
