--- a/_posts/Redis/2015-1-11-Redis命令大全.md
+++ b/_posts/Redis/2015-1-11-Redis命令大全.md
@@ -336,3 +336,5 @@ redis> SMEMBERS myotherset
 - zcard 返回key的有序集元素个数。
 - zount ZCOUNT key min max 返回有序集key中，score值在min和max之间(默认包括score值等于min或max)的成员。
 - zincrby ZINCRBY key increment member 为有序集key的成员member的score值加上增量increment。
+- zrem ZREM key member [member ...] 删除一个或多个成员
+- zrank ZRANK key member 返回有序集key中成员member的排名(分数从小到大排列)。 
