修改redis基本命令

--- a/_posts/Redis/2015-1-11-Redis命令大全.md
+++ b/_posts/Redis/2015-1-11-Redis命令大全.md
@@ -338,4 +338,23 @@ redis> SMEMBERS myotherset
 - zincrby ZINCRBY key increment member 为有序集key的成员member的score值加上增量increment。
 - zrem ZREM key member [member ...] 删除一个或多个成员
 - zrank ZRANK key member 返回有序集key中成员member的排名(分数从小到大排列)。 
-
+- zremrangebyscore ZREMRANGEBYSCORE key min max 移除有序集key中，所有score值介于min和max之间(包括等于min或max)的成员。
+- zinterstore ZINTERSTORE destination numkeys key [key ...] 计算给定的numkeys个有序集合的交集，并且把结果放到destination中。
+{% highlight sql %}
+redis> ZADD zset1 1 "one"
+(integer) 1
+redis> ZADD zset1 2 "two"
+(integer) 1
+redis> ZADD zset2 1 "one"
+(integer) 1
+redis> ZADD zset2 2 "two"
+(integer) 1
+redis> ZADD zset2 3 "three"
+(integer) 1
+redis> ZINTERSTORE out 2 zset1 zset2
+(integer) 2
+redis> ZRANGE out 0 -1
+1)"one"
+2)"two"
+{% endhighlight %}
+- 
