完成Redis命令大全

--- a/_posts/Redis/2015-1-11-Redis命令大全.md
+++ b/_posts/Redis/2015-1-11-Redis命令大全.md
@@ -357,5 +357,11 @@ redis> ZRANGE out 0 -1
 1)"one"
 2)"two"
 {% endhighlight %}
-- 
+- zrange ZRANGE key start stop 返回有序集key中，指定区间内的成员。其中成员按score值递增(从小到大)来排序。具有相同score值的成员按字典序来排列。
+- zrangebyscore ZRANGEBYSCORE key min max 返回key的有序集合中的分数在min和max之间的所有元素（包括分数等于max或者min的元素）。min和max可以是-inf和+inf，这样一来，你就可以在不知道有序集的最低和最高score值的情况下，使用ZRANGEBYSCORE这类命令。
+- zremrangebyrank ZREMRANGEBYRANK key start stop 移除有序集key中，指定排名(rank)区间内的所有成员。
+- zrevrange ZREVRANGE key start stop 返回有序集key中，指定区间内的成员。其中成员的位置按score值递减(从大到小)来排列。具有相同score值的成员按字典序的反序排列。
+- zrevrangebyscore 返回key的有序集合中的分数在max和min之间的所有元素（包括分数等于max或者min的元素）。与有序集合的默认排序相反，对于这个命令，元素被认为是从高分到低具有相同分数的元素按字典反序。
+- zrevrank 返回有序集key中成员member的排名，其中有序集成员按score值从大到小排列。排名以0为底，也就是说，score值最大的成员排名为0。
+- zscore ZSCORE key member 返回有序集key中，成员member的score值。
 
