修改ES之按照词语搜索

--- a/_posts/杂记/2014-12-16-Git命令参考手册.md
+++ b/_posts/杂记/2014-12-16-Git命令参考手册.md
@@ -8,6 +8,8 @@ date : 2014-12-16
 
 <!-- more -->
 
+[Pro Git中文版](http://jingxuan.io/progit/)
+
 >
 git init                                                  # 初始化本地git仓库（创建新仓库）
 git config --global user.name "xxx"                       # 配置用户名
