--- a/_posts/spider/2014-11-27-细说垂直型网络爬虫（六）【解析模块之Jsoup】.md
+++ b/_posts/spider/2014-11-27-细说垂直型网络爬虫（六）【解析模块之Jsoup】.md
@@ -10,6 +10,7 @@ date: 2014-11-27
 
 标签： 网络爬虫 抓取模块 解析 Jsoup
 
+网络爬虫技术交流，请加QQ群：235971260
 
 ##Jsoup是用来干什么的
 Jsoup是解析Html文档的工具，它可以将String、File、InputStream转化为Document进行解析，此外还可以直接通过URL获取Document。
