--- a/_posts/spider/2014-11-29-细说垂直型网络爬虫（八）【解析模块之Parser】.md
+++ b/_posts/spider/2014-11-29-细说垂直型网络爬虫（八）【解析模块之Parser】.md
@@ -10,6 +10,7 @@ date: 2014-11-29
 
 标签： 网络爬虫 抓取模块 解析 Parser
 
+网络爬虫技术交流，请加QQ群：235971260
 
 ##解析（Parser）的主要方法
 解析一个网页主要的方法有三种：正则匹配、Document结构树处理、智能算法提取。
