--- a/_posts/spider/2014-12-2-细说垂直型网络爬虫（九）【解析模块之Parser智能提取】.md
+++ b/_posts/spider/2014-12-2-细说垂直型网络爬虫（九）【解析模块之Parser智能提取】.md
@@ -10,6 +10,8 @@ date: 2014-12-2
 
 标签： 网络爬虫 抓取模块 解析 Parser 智能提取
 
+网络爬虫技术交流，请加QQ群：235971260
+
 这里将要介绍的智能提取是针对新闻类网页设计的一个简单提取程序，也是对上一篇Parser的横向扩展介绍。
 
 ##为什么需要这样一个智能提取的程序
