--- a/_posts/spider/2014-12-29-细说垂直型网络爬虫（十九）【突破访问限制】.md
+++ b/_posts/spider/2014-12-29-细说垂直型网络爬虫（十九）【突破访问限制】.md
@@ -12,6 +12,8 @@ date: 2014-12-29
 
 标签： 网络爬虫 反爬虫
 
+网络爬虫技术交流，请加QQ群：235971260
+
 ##网站的反爬虫
 网络爬虫在访问网站并不是一个常规的用户行为，通常都会对网站的带宽和服务器带来一些压力。一些比较健壮的网络爬虫通常会控制对网站的访问频率。
 但是大多数网络爬虫可能并不会采取措施，为了防止网络爬虫带来的负面影响，一些的网站会对来访者的访问做限制。
