--- a/_posts/spider/2014-12-4-细说垂直型网络爬虫（十一）【去重模块之simHash】.md
+++ b/_posts/spider/2014-12-4-细说垂直型网络爬虫（十一）【去重模块之simHash】.md
@@ -10,6 +10,8 @@ date: 2014-12-4
 
 标签： 网络爬虫 文本去重 simHash
 
+网络爬虫技术交流，请加QQ群：235971260
+
 ##simHash算法简介
 simHash算法的主要思想就是降维。simHash借助了hash算法的思想，将输入均匀的散列开，但是在hash算法中，输入发生一点小的变化，
 得到的hash值也会大不相同。而simHash的神奇就在于，原始输入差异不大的话，得到的“哈希值”和大致相同。
