--- a/_posts/spider/2014-12-8-细说垂直型网络爬虫（十二）【监控模块之网页监控】.md
+++ b/_posts/spider/2014-12-8-细说垂直型网络爬虫（十二）【监控模块之网页监控】.md
@@ -10,6 +10,8 @@ date: 2014-12-8
 
 标签： 网络爬虫 监控
 
+网络爬虫技术交流，请加QQ群：235971260
+
 ###为什么需要监控
 
 1.抓取过程中，目标网页或网站可能对你的访问作出一些限制，例如禁止爬虫访问，所以很有必要知道目标网站是否禁止了爬虫的访问。
