--- a/_posts/spider/2014-12-9-细说垂直型网络爬虫（十三）【监控模块之服务器监控】.md
+++ b/_posts/spider/2014-12-9-细说垂直型网络爬虫（十三）【监控模块之服务器监控】.md
@@ -10,6 +10,8 @@ date: 2014-12-9
 
 标签： 网络爬虫 监控
 
+网络爬虫技术交流，请加QQ群：235971260
+
 ###为什么需要监控爬虫服务器
 爬虫运行时会消耗服务器的各种资源，为了防止意外发生以及发生意外后能够尽早知道，所以对服务器的监控也是很有必要的。通常监控
 服务器的属性有：带宽、CPU运行情况、内存使用情况、磁盘使用情况等。
