--- a/_posts/spider/2014-11-17-细说垂直型网络爬虫（三）【系统结构】.md
+++ b/_posts/spider/2014-11-17-细说垂直型网络爬虫（三）【系统结构】.md
@@ -11,6 +11,8 @@ date: 2014-11-17
 
 标签： 网络爬虫 系统结构
 
+网络爬虫技术交流，请加QQ群：235971260
+
 ##系统？系统结构？
 >
 没错！是系统！如果真的要将一个垂直爬虫用作商业用途，仅仅一个爬虫是不够的，还需要对抓取到的数据进行二次处理，才能和将要利
