--- a/_posts/spider/2014-12-15-细说垂直型网络爬虫（十七）【源码解读之Crawl4J（4）】.md
+++ b/_posts/spider/2014-12-15-细说垂直型网络爬虫（十七）【源码解读之Crawl4J（4）】.md
@@ -10,6 +10,8 @@ date: 2014-12-15
 
 标签： 网络爬虫 开源爬虫源码解读 Crawl4J
 
+网络爬虫技术交流，请加QQ群：235971260
+
 ###1.Crawl4J简介
 Crawl4J是一个开源的Java爬虫程序，总共才三十多个类，比较简单，非常适合爬虫入门的学习。
 （官方地址：https://code.google.com/p/crawler4j/）
