--- a/_posts/spider/2015-7-3-细说垂直型网络爬虫（二十）【应对封IP一种可能的解决办法】.md
+++ b/_posts/spider/2015-7-3-细说垂直型网络爬虫（二十）【应对封IP一种可能的解决办法】.md
@@ -12,6 +12,8 @@ date: 2015-7-3
 
 标签： 网络爬虫 反爬虫
 
+网络爬虫技术交流，请加QQ群：235971260
+
 ##需要解决的问题
 在网络爬虫抓取信息的过程中，如果抓取频率高过了网站的设置阀值，将会被禁止访问。通常，网站的反爬虫机制都是依据IP来标识爬虫的。
 于是在爬虫的开发者通常需要采取两种手段来解决这个问题：
